Updating the <p> in index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Document's Header</h1>
-    <p>This is a text to represent a content.</p>
+    <p>This is a text to represent a content. Trying to do that!</p>
 </body>
 </html>
